--- a/sass/_top-stories.scss
+++ b/sass/_top-stories.scss
@@ -47,7 +47,7 @@
 
     &__submit-btn{
         background: $blue;
-        color: $lightgrey;
+        color: $white;
         padding: 10px 20px 5px 20px;
         border: none;
         font-size: 1.3rem;
